@@ -161,8 +161,13 @@ ifneq (,$(filter hppa sparc, $(DEB_BUILD_ARCH)))
 	confflags += --disable-java
 endif
 
-config.status: configure
+build: build-arch build-indep
+build-arch: build-stamp
+build-indep: build-stamp
+
+build-stamp:
 	dh_testdir
+	
 	dh_autoreconf
 	
 	# This is a work-around for #474087 (broken openipmi .pc files).
@@ -177,13 +182,6 @@ config.status: configure
 		JAVA_LDFLAGS="$(JAVA_LDFLAGS)" \
 		|| ( status=$$?; cat config.log; exit $$status )
 
-build: build-arch build-indep
-build-arch: build-stamp
-build-indep: build-stamp
-
-build-stamp: config.status
-	dh_testdir
-	
 	$(MAKE)
 	perl ./debian/bin/check_plugins.pl
 	
