@@ -4,6 +4,10 @@ collectd (5.5.1-5) UNRELEASED; urgency=medium
     - Disable the sigrok plugin on non-Linux; restrict build dependency to
       linux-any; thanks to Andreas Beckmann for reporting this
       (Closes: #825606).
+  * debian/rules:
+    - Fix failure to build twice in a row introduced by dh_autoreconf_clean;
+      drop the separate config.status target and, hence, a dependency on the
+      configure script.
 
  -- Sebastian Harl <tokkee@debian.org>  Tue, 05 Jul 2016 13:58:29 +0200
 
